kustomize/overlays/istio/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: silly-demo
spec:
  replicas: 5
  strategy:
    canary:
      canaryService: silly-demo-canary
      stableService: silly-demo-stable
      trafficRouting:
        istio:
          virtualServices:
            - name: silly-demo-1
              routes:
                - primary
            - name: silly-demo-2
              routes:
                - secondary
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause: {duration: 10}
        - setWeight: 60
        - pause: {duration: 10}
        - setWeight: 80
        - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: silly-demo
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: silly-demo
